[project]
name = "lps-comuni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "openpyxl>=3.1.5",
    "requests>=2.32.4",
    "shapely>=2.1.1",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.46.1",
]
